# spicedmoon

./: .gitignore  CHANGELOG.md  NEWS.md  README.md  pyproject.toml  setup.cfg
spicedmoon/: __init__.py  angular.py  basics.py  constants.py  coordinates.py  core.py  customkernel.py  deprecated.py  geometry.py  geoselenic.py  geotic.py  heliac.py  selenic.py  spicedmoon.py  types.py
spicedmoon/body/: customkernel.py  geotic.py  preexisting.py  selenic.py
spicedmoon/custombody/: core.py  geotic.py  selenic.py
src/spiced_moon/: __init__.py  spiced_moon.py
src/spicedmoon/: spicedmoon.py
tests/: comparator.py  compare_body_nobody.py  night_calculator.py
