[metadata]
name = spiced_moon
version = 0.0.0
author = Group of Atmospheric Optics (GOA-UVa), Universidad de Valladolid
author_email = gaton@goa.uva.es
description = Calculation of lunar data using NASA’s SPICE toolbox.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GOA-UVa/rimopy
project_urls =
    Bug Tracker = https://github.com/GOA-UVa/spiced_moon/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

install_requires = 
    numpy>=1.22.0    
    spiceypy>=4.0.3

[options.packages.find]
where = src
